--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -25,9 +25,11 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
+      working-directory: "./library_spectra_validation"
       run: |
         python -m pip install --upgrade pip
         pip install -e .[dev]
     - name: Test with pytest
+      working-directory: "./library_spectra_validation"
       run: |
         pytest
